--- a/Experience.html
+++ b/Experience.html
@@ -17,8 +17,9 @@
                 <li><a href="publications.html">Publications</a>
                     <ul>
                         <li><a href="publications.html#journal">Journal</a></li>
-                        <li><a href="publications.html#products">Products</a></li>
                         <li><a href="publications.html#conference">Conference</a></li>
+                        <li><a href="publications.html#products">Products</a></li>
+                        <li><a href="publications.html#pubinprep">Under Preparation</a></li>
                     </ul>
                 </li>
                 <li><a href="mailto:zhangcd07@outlook.com">Contact me</a></li>
@@ -27,20 +28,6 @@
     </header>
     <section class="Experience">
         <ul>
-            <li>
-                Employment:
-                <ul>
-                    <li>
-                        July 2019 – now, critical care fellow, OHSU Hospital, Portland, OR, USA
-                    </li>
-                    <li>
-                        Jun. 2016 – Jun. 2019, Internal medicine resident, Beaumont Hospital, Royal Oak, MI, USA
-                    </li>
-                    <li>
-                        Sep. 2015 – Jun. 2016, Postdoctoral research fellow, Tulane University, New Orleans, LA, USA
-                    </li>
-                </ul>
-            </li>
             <li>
                 Education:
                 <ul>
@@ -52,6 +39,21 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                Postgraduate Training:
+                <ul>
+                    <li>
+                        July 2019 – present, Fellowship in Critical Care Medicine, Oregon Health and Science University, Portland, OR, USA
+                    </li>
+                    <li>
+                        Jun. 2016 – Jun. 2019, Internship and Residency in Internal Medicine, Beaumont Hospital, Royal Oak, MI, USA
+                    </li>
+                    <li>
+                        Sep. 2015 – Jun. 2016, Postdoctoral Research Fellowship, Tulane University, New Orleans, LA, USA
+                    </li>
+                </ul>
+            </li>
+
         </ul>
     </section>
     <footer>
