--- a/about.html
+++ b/about.html
@@ -17,8 +17,9 @@
                 <li><a href="publications.html">Publications</a>
                     <ul>
                         <li><a href="publications.html#journal">Journal</a></li>
-                        <li><a href="publications.html#products">Products</a></li>
                         <li><a href="publications.html#conference">Conference</a></li>
+                        <li><a href="publications.html#products">Products</a></li>
+                        <li><a href="publications.html#pubinprep">Under Preparation</a></li>
                     </ul>
                 </li>
                 <li><a href="mailto:zhangcd07@outlook.com">Contact me</a></li>
@@ -26,6 +27,8 @@
         </nav>
     </header>
     <section class="ps">
+        <p class="ps"> </p>
+        <p class="ps"> </p>
     <p class="ps">My interest in clinical informatics started from my experience as a medical student. In 2012, I was introduced to my first clinical research project, aiming to study the utility of procalcitonin in differentiating lupus flare from systemic infection in pediatric patients. I learnt there were at least 100 cases in the past 5 years, much more than any reported cohort; the data, if published, could potentially change practice. Peking Union Medical College Hospital (PUMCH) is known for its well-kept medical records dating back to a century ago. However, up until my graduation in 2015, all medical records were kept on paper. To build the database for our research, we first found the medical record number of all pediatric lupus patients from a hand-written case log of the pediatric floor. Then we walked to Medical Record Department with an approval letter from the Chair of Pediatrics to access patients’ chart, then carried hundred-page charts to a huge table. We flipped through every page to enter vital signs, lab results and diagnoses into our Excel sheet. After 3 months of diligent work, our team of four medical students collected data on 70 cases. One day, I was astonished to learn that a Harvard Medical School student conducted research involving 5,000 cases using data extracted from the electronic health record (EHR) and completed within a month. PUMCH is proud of being the national referral center for the most complicated cases. However, for the first time I realized how the ability to discover practice-changing knowledge could be impaired by the outdated informatics system.
         </p>
         <p class="ps">I was driven into clinical informatics as I furthered my research. During residency, I built my first database from EHR comprising thousands of cases, using which I completed several projects with my colleagues. Yet I noticed other limitations in the current methodology: Lack of standard terminology makes studies hard to be compared with each other and applied to a wider population. Overly restricted data access between institutions limits the size and applicability of a study. Inefficient communication between researchers, computer scientists and statisticians delays the production of medical evidence. Meanwhile, clinicians are constantly practicing in evidence-free zone. I realize that becoming a clinical informatician will equip me with the best set of skills to solve those challenges in clinical research. Despite my busy clinical schedule as a first-year critical care fellow, it has motivated me to learn new skills such as Python data science, SNOMED CT foundation course, and database management, and to apply these skills into clinical practice, such as helping hospitals build database during the COVID-19 pandemic, and joining the National COVID-19 cohort collaborative.
