--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 <li><a href="publications.html">Publications</a>
                     <ul>
                         <li><a href="publications.html#journal">Journal</a></li>
-                        <li><a href="publications.html#products">Products</a></li>
                         <li><a href="publications.html#conference">Conference</a></li>
+                        <li><a href="publications.html#products">Products</a></li>
+                        <li><a href="publications.html#pubinprep">Under Preparation</a></li>
                     </ul>
                 </li>
                 <li><a href="mailto:zhangcd07@outlook.com">Contact me</a></li>
@@ -27,29 +28,29 @@
     </header>
     <section class="left"><img src="images/photo.jpg" alt="photo of Chengda Zhang"></section>
     <section class="right">
-        <h2>My one-liner</h2>
+        <h3>My One-liner</h3>
         <p>
             I am a 32 years-old internist, in-training intensivist, husband and father, who is passionate about patient care and all technologies in adult critical care. My other history includes born and raised in China, graduated from Tsinghua University/Peking Union Medical College, finished internal medicine residency training in Beaumont Hospital, Michigan in 2019.
         </p>
-        <h3>Assessment and plan</h3>
+        <h3>Assessment and Plan</h3>
         <p>
             32 years-old physician, at the beginning of my career. The plan would include:
         </p>
         <ul>
             <li>Always take care of my patients</li>
             <li>Apply for clinical informatics fellowship</li>
-            <li>Promote and get involved in Tele-ICU and related technology developement</li>
+            <li>Promote and get involved in tele-ICU and related technology developement</li>
             <li>Promote data-driven real-time decision support for ICU providers</li>
-            <li>……</li>
+
         </ul>    
     </section>
     <section class="Blog">
-        <h2>My recent work</h2>
+        <h2>My Recent Work</h2>
         <ul>
             <li>
-                <h3><a href="http://ci-fellowship.herokuapp.com/">CI fellowship application tool</a></h3>
+                <h3><a href="http://ci-fellowship.herokuapp.com/">Clinical Informatics fellowship application tool</a></h3>
                 <h4>6/29/2020</h4>
-                <p>This app will help CI fellowship applicants determine what materials are required for their application. Data is most recently updated in 6/2020 after the opening of ERAS.</p>
+                <p>This app will help clinical informatics fellowship applicants determine what materials are required for their application. Data is most recently updated in 6/2020 after the opening of ERAS.</p>
             </li>
             <li>
                 <h3><a href="COVID-19.html">My COVID-19 reading</a></h3>
