--- a/publications.html
+++ b/publications.html
@@ -17,8 +17,9 @@
                 <li class="current"><a href="publications.html">Publications</a>
                     <ul>
                         <li><a href="publications.html#journal">Journal</a></li>
-                        <li><a href="publications.html#products">Products</a></li>
                         <li><a href="publications.html#conference">Conference</a></li>
+                        <li><a href="publications.html#products">Products</a></li>
+                        <li><a href="publications.html#pubinprep">Under Preparation</a></li>
                     </ul>
                 </li>
                 <li><a href="mailto:zhangcd07@outlook.com">Contact me</a></li>
@@ -36,13 +37,9 @@
             <li>Zhou M, <strong>Zhang C</strong>, Fu Q, et al. An investigation on international exchange programs of eight-year medical college students. <i>Chinese Journal of Medical Education</i>, 2013 33(4): 512-514.</li>
             <li>Wang H, Li Y, <strong>Zhang C</strong>, et al. Immunological and virological responses to cART in HIV/HBV co-infected patients from a multicenter cohort. <i>AIDS</i>, 2012 Sep 10;26(14):1755-63.</li>
         </ol>
-        <h2 id="products">Products</h2>
-        <ol>
-            <li><a href="http://ci-fellowship.herokuapp.com/">Clinical Informatics Fellowship Application Tool</a>: Help clinical informatics fellowship applicants to decide what materials they need to prepare.</li>
-        </ol>
         <h2 id="conference">Conference Presentations</h2>
         <ol>
-            <li><strong>Zhang C</strong> Modeling of High COVID-19 Disease Burden Areas in New York City Using Location Data. <i>Virtual Pacific Northwest Research Symposium</i>, Rapid session, Portland, 2020. <a href="NYC.html">Full report</a></li>
+            
             <li><strong>Zhang C</strong>, Iftikhar H, Nair GB. Influence of Diabetes Mellitus Related Immune Dysfunction in Hospitalized Interstitial Lung Disease Patients. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
             <li><strong>Zhang C</strong>, Iftikhar H, Nair GB. Attributes of Hospitalized Elderly Compared to Younger Patients with Interstitial Lung Disease. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
             <li>Iftikhar H, Imam Z, <strong>Zhang C</strong>, Hehar J, Nair GB. Multiple Calcified Pulmonary Nodules: It Need Not Be What the Eye Doesn’t See. <i>CHEST annual meeting</i>, Poster presentation, San Antonio, 2018</li>
@@ -54,6 +51,15 @@
             <li>Iftikhar H, <strong>Zhang C</strong>, Hehar J, Bozyk PD, Nair G. Wait It is Not a Lab Error! An Uncommon Case of Serum Ammonia level greater than 1000 millimoles per litre and Normal Hepatic Function. <i>American Thoracic Society International Conference</i>, poster presentation, San Diego, 2018 </li>
             <li><strong>Zhang C</strong>, Wang W, Li T, et al. CYP2B6 and ABCB1 Polymorphisms' Effects on Nevirapine Plasma Concentration in Chinese HIV-infected Patients: New SNP Loci were Found. <i>13th Asia-Pacific Congress of Clinical Microbiology and Infection</i>, poster presentation, Beijing, 2012</li>
             <li><strong>Zhang C</strong>, Wang W, Li T, et al. The Interaction of CD4 T-Cell Count and Nevirapine Hepatotoxicity in China: A Change in National Treatment Guidelines is Warranted. <i>13th Asia-Pacific Congress of Clinical Microbiology and Infection</i>, poster presentation, Beijing, 2012</li>
+        </ol>
+        <h2 id='pubinprep'>Publication under Preparation </h2>
+        <ol>
+            <li><strong>Zhang C</strong>. Modeling of High COVID-19 Disease Burden Areas in New York City Using Location Data. Portland, 2020. <a href="NYC.html">Full report</a></li>
+            <li><strong>National COVID Cohort Collaborative</strong>. The National COVID Cohort Collaborative (N3C): Rationale, Design, Infrastructure, and Deployment.</li>
+        </ol>
+        <h2 id="products">Products</h2>
+        <ol>
+            <li><a href="http://ci-fellowship.herokuapp.com/">Clinical Informatics Fellowship Application Tool</a>: Help clinical informatics fellowship applicants to decide what materials they need to prepare.</li>
         </ol>
     </section>
 
