--- a/skills.html
+++ b/skills.html
@@ -17,8 +17,9 @@
                 <li><a href="publications.html">Publications</a>
                     <ul>
                         <li><a href="publications.html#journal">Journal</a></li>
-                        <li><a href="publications.html#products">Products</a></li>
                         <li><a href="publications.html#conference">Conference</a></li>
+                        <li><a href="publications.html#products">Products</a></li>
+                        <li><a href="publications.html#pubinprep">Under Preparation</a></li>
                     </ul>
                 </li>
                 <li><a href="mailto:zhangcd07@outlook.com">Contact me</a></li>
@@ -61,7 +62,7 @@
         </ul>
 
         <h2>
-            Clinical
+            Clinical Certificates
         </h2>
         <ul>
             <li>Emergency Neurological Life Support (ENLS) by Neurocritical Care Society. Certificate earned in 5/2020</li>
