--- a/Experience.html
+++ b/Experience.html
@@ -32,7 +32,10 @@
                 Education:
                 <ul>
                     <li>
-                        June 2008 – Jul. 2015, M.D., Peking Union Medical College, Tsinghua University, Beijing, China
+                        Jan 2010 – Jul. 2015, Doctorate of Medicine, Peking Union Medical College, Tsinghua University, Beijing, China
+                    </li>
+                    <li>
+                        Jun 2008 – Jan 2010, Pre-medical studies, School of Life Sciences, Tsinghua University, Beijing, China
                     </li>
                     <li>
                         Aug. 2007 – Jun. 2008 Department of Precision Instrument and Mechanology, Tsinghua University, Beijing, China
