taken off COVID-19 NYC project
taken off COVID-19 NYC project

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
                 <p>This app will help clinical informatics fellowship applicants determine what materials are required for their application. Data is most recently updated in 6/2020 after the opening of ERAS.</p>
             </li>
             <li>
-                <h3><a href="COVID-19.html">My COVID-19 reading</a></h3>
+                <h3><a href="temp.html">My COVID-19 reading</a></h3>
                 <h4>5/27/2020</h4>
                 <p>In preparing for my upcoming MICU/COVID unit rotation at OHSU, I have read and summarized some of the recent guidelines.</p>
             </li>
             <li>
-                <h3><a href="NYC.html">Modeling of High COVID-19 Disease Burden Areas in New York City Using Location Data.</a></h3>
+                <h3><a href="NYC.html">Modeling of High COVID-19 Disease Burden Neighborhoods in New York City Using Location Data.</a></h3>
                 <h4>5/14/2020</h4>
                 <p>I used machine-learning method to identify high disease burden area in NYC</p>
             </li>
