--- a/eICU.html
+++ b/eICU.html
@@ -30,7 +30,7 @@
     <p> </p>
     <h2>The Analysis of eICU Collaborative Research Database (eICU-CRD)</h2>
     <h3>Setting up local database</h3>
-    <p>The intalling process for local eICU database is described in the <a href="https://eicu-crd.mit.edu/tutorials/install_eicu_locally/">eICU-CRD</a> website. However while
+    <p>The installing process for local eICU database is described in the <a href="https://eicu-crd.mit.edu/tutorials/install_eicu_locally/">eICU-CRD</a> website. However while
     doing so, I encountered large work volume in setting up local tables with appropreate variables and the mission became impossible when the size of a single csv file exceeds 1Gb.
     Therefore, I have created and shared a way to set up local postgreSQL database with python. Using this method, I have successfully inserted all my csv into database, including
     the vital sign table which had over 140 million rows.</p>
