--- a/eICU.html
+++ b/eICU.html
@@ -29,12 +29,15 @@
     <section class="Experience">
     <p> </p>
     <h2>The Analysis of eICU Collaborative Research Database (eICU-CRD)</h2>
-    <h3>Setting up local database</h3>
-    <h4>8/9/2020-8/10/2020</h4>
-    <p>The installing process for local eICU database is described in the <a href="https://eicu-crd.mit.edu/tutorials/install_eicu_locally/">eICU-CRD</a> website. However while
-    doing so, I encountered large work volume in setting up local tables with appropreate variables and the mission became impossible when the size of a single csv file exceeds 1Gb.
+    <ol>
+        <li><h3>Setting up local database</h3>
+            <h5>8/9/2020-8/10/2020</h5>
+            <p>The instruction for installing local eICU database is posted in the <a href="https://eicu-crd.mit.edu/tutorials/install_eicu_locally/">eICU-CRD</a> website. However while
+    doing so, I encountered large work volume in setting up local tables with appropreate variables and the mission became impossible when the size of a single csv file exceeded 1Gb.
     Therefore, I have created and shared a way to set up local postgreSQL database with python. Using this method, I have successfully inserted all my csv into database, including
-    the vital sign table which had over 140 million rows.</p>
+    the vital sign table which had over 140 million rows. My source code is available on <a href="https://github.com/zhangcd07/eICU/blob/master/csv_insertion.py">Github</a>.</p>
+        </li>
+    </ol>
     </section>
     <footer>
         <a href=#top id="aboutlinktotop">Back to top</a>
