--- a/publications.html
+++ b/publications.html
@@ -54,7 +54,7 @@
         </ol>
         <h2 id='pubinprep'>Publication under Preparation </h2>
         <ol>
-            <li><strong>Zhang C</strong>. Modeling of High COVID-19 Disease Burden Areas in New York City Using Location Data. Portland, 2020. <a href="NYC.html">Full report</a></li>
+            <li><strong>Zhang C</strong>. Modeling of High COVID-19 Disease Burden Areas in New York City Using Location Data. Portland, 2020. <a href="temp.html">Full report</a></li>
             <li><strong>National COVID Cohort Collaborative</strong>. The National COVID Cohort Collaborative (N3C): Rationale, Design, Infrastructure, and Deployment.</li>
         </ol>
         <h2 id="products">Products</h2>
