--- a/skills.html
+++ b/skills.html
@@ -32,6 +32,9 @@
         </h2>
         <ul>
             <li>
+                <a href="https://www.coursera.org/verify/RUYLMFGYAYFX">SQL for Data Science</a> by University of California, Davis on Coursera. Certificate earned at 08/18/2020
+            </li>
+            <li>
                 <a href="https://www.coursera.org/account/accomplishments/records/7R49DDTYVW5W">Introduction to CSS3</a> by University of Michigan on Coursera. Certificate earned at 05/27/2020
             </li>
             <li>
