--- a/skills.html
+++ b/skills.html
@@ -60,7 +60,7 @@
             Electronic Medical Record
         </h2>
         <ul>
-            <li>SNOMED CT Foundation Course by SNOMET CT</li>
+            <li>SNOMED CT Foundation Course by SNOMET CT. Certificate earned at 08/31/2020</li>
             <li>Advanced Excel skills for clinical research</li>
         </ul>
 
