--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="right">
         <h3>My One-liner</h3>
         <p>
-            I am a 32 years-old internist, in-training intensivist, husband and father, who is passionate about patient care and all technologies in adult critical care. My other history includes born and raised in China, graduated from Tsinghua University/Peking Union Medical College, finished internal medicine residency training in Beaumont Hospital, Michigan in 2019.
+            I am a 32 years-old internist, in-training intensivist, future informatician, husband and father, who is passionate about patient care and all technologies in adult critical care. My other history includes born and raised in China, graduated from Tsinghua University/Peking Union Medical College, finished internal medicine residency training in Beaumont Hospital, Michigan in 2019.
         </p>
         <h3>Assessment and Plan</h3>
         <p>
@@ -41,12 +41,16 @@
             <li>Apply for clinical informatics fellowship</li>
             <li>Promote and get involved in tele-ICU and related technology developement</li>
             <li>Promote data-driven real-time decision support for ICU providers</li>
-
         </ul>    
     </section>
     <section class="Blog">
         <h2>My Recent Work</h2>
         <ul>
+            <li>
+                <h3><a href="esophageal.html">Esophageal balloon manometry</a></h3>
+                <h4>2/19/2021</h4>
+                <p>Esophageal balloon manometry is increasingly importand in management of ARDS. I summarized recent evidence for esophageal manometry, as well as methods to verify placement.</p>
+            </li>
             <li>
                 <h3><a href="eICU.html">eICU database analysis</a></h3>
                 <h4>8/10/2020</h4>
@@ -63,7 +67,7 @@
                 <p>In preparing for my upcoming MICU/COVID unit rotation at OHSU, I have read and summarized some of the recent guidelines.</p>
             </li>
             <li>
-                <h3><a href="temp.html">Modeling of High COVID-19 Disease Burden Neighborhoods in New York City Using Location Data.</a></h3>
+                <h3><a href="NYC.html">Modeling of High COVID-19 Disease Burden Neighborhoods in New York City Using Location Data.</a></h3>
                 <h4>5/14/2020</h4>
                 <p>I used machine-learning method to identify high disease burden area in NYC</p>
             </li>
