--- a/statistics.html
+++ b/statistics.html
@@ -37,9 +37,10 @@
                 the actual value does NOT change. Therefore, the better way of defining confidence interval is: A range that has 95% chance covering the actual value. If you repeat your research 100 
                 times, you get 100 different 95% confidence intervals, and on average, 5 of them will not cover the actual value. Within any of your confidence intervals, the actual value could be 
                 ANYWHERE, it does NOT change when the upper limit is super high or lower limit is very low.
+                <img src="images/confidence-interval.png" alt="confidence interval">
             </li>
             <li>
-                
+               
             </li>
         </ul>
     </section>
