--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
         <h2>My Recent Work</h2>
         <ul>
             <li>
+                <h3><a href="statistics.html">Statistics</a></h3>
+                <p>As I am doing my own statistics recently, here is what I have learnt.</p>
+            </li>
+            <li>
                 <h3><a href="esophageal.html">Esophageal balloon manometry</a></h3>
                 <h4>2/19/2021</h4>
                 <p>Esophageal balloon manometry is increasingly importand in management of ARDS. I summarized recent evidence for esophageal manometry, as well as methods to verify placement.</p>
